styles/site.css
/* Scaffolding */

body {
    color: #444444;
    font-weight: 300;
    font: 16px Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
    margin: 0;
    padding: 50px;
}

.wrapper {
    margin: 0 auto;
    width: 1020px;
}

.wrapper:before,
.wrapper:after {
    content: " ";
    display: table;
}

.wrapper:after {
    clear: both;
}


/* Typography */

h1, h2, h3, h4, h5, h6 {
    color: #444444;
    margin: 0 0 20px;
}

h1, h2, h3, h4, h5, h6 {
    line-height: 1;
}

h1 { font-size: 30px; }
h2 { font-size: 26px; }
h3 { font-size: 20px; }
h4 { font-size: 18px; }

h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
    color: #4f738d;
}

h1 a:hover {
    text-decoration: none;
}

a {
    color: #4f738d;
    text-decoration: none;
}

a:hover,
a:active {
    color: #2f538d;
    text-decoration: underline;
}

p, ul, ol, table, pre, dl {
    margin: 0 0 20px;
}

strong {
    color: #444444;
    font-weight: 700;
}

section {
    float: right;
    min-height: 400px;
    overflow: hidden;
    padding-bottom: 50px;
    width: 720px;
}

hr {
    background: #dddddd;
    border: 0;
    height: 1px;
    margin: 0 0 20px;
}

blockquote {
    border-left: 1px solid #dddddd;
    margin: 0;
    padding: 0 0 0 20px;
    font-style: italic;
}

code, pre {
    background: #f8f8f8;
    border-radius: 5px;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    border: 1px solid #dddddd;
    color: #444444;
    font-family: Menlo, Consolas, "Courier New", Courier, "Liberation Mono", monospace;
    font-size: 13px;
    padding: 2px 4px;
}

pre {
    overflow-x: auto;
    padding: 8px 15px;
}

pre > code {
    background: transparent;
    border: none;
    padding: 0;
}

table {
    border-collapse: collapse;
    width: 100%;
}

th, td {
    border-bottom: 1px solid #dddddd;
    padding: 5px 10px;
    text-align: left;
}

dt {
    color: #444444;
    font-weight: 700;
}

th {
    color: #444444;
}


/* Header / Sidebar Top */

header {
    border-right: 1px solid #dddddd;
    float: left;
    margin-top: -50px;
    min-height: 100%;
    padding-right: 30px;
    position: fixed;
    width: 240px;
}

header h1 {
    margin: 50px 0 12px;
}


/* Navbar */

nav ul {
    background: #ffffff;
    border-radius: 5px;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    border: 1px solid #dddddd;
    font-size: 13px;
    list-style: none;
    padding: 0;
}

nav li {
    border-bottom: 1px solid #dddddd;
    height: 24px;
    line-height: 24px;
    text-align: center;
}

nav li:last-child {
    border-bottom: none;
}

nav li a {
    color: #444444;
    display: block;
}

nav li a:hover,
nav li a:active {
    color: #444444;
    font-weight: bold;
    text-decoration: none;
}

nav li a:active,
nav li a.active,
nav li a.active:hover {
    background: #e5e5e5;
}


/* Pagination */

.pagination:before,
.pagination:after {
    content: " ";
    display: table;
}

.pagination:after {
    clear: both;
}

.pagination ul {
    background: #ffffff;
    border-radius: 5px;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    border: 1px solid #dddddd;
    display: inline-block;
    float: right;
    height: 24px;
    list-style: none;
    padding: 0;
}

.pagination li {
    border-right: 1px solid #dddddd;
    float: left;
    height: 24px;
}

.pagination li:last-child {
    border-right: none;
}

.pagination li a {
    color: #999999;
    display: block;
    font-size: 11px;
    font-size: 13px;
    height: 24px;
    line-height: 24px;
    padding: 0 8px;
    text-align: center;
    width: 1em;
}

.pagination li:first-child a {
    border-radius: 5px 0 0 5px;
    -moz-border-radius: 5px 0 0 5px;
    -webkit-border-radius: 5px 0 0 5px;
}

.pagination li:last-child a {
    border-radius: 0 5px 5px 0;
    -moz-border-radius: 0 5px 5px 0;
    -webkit-border-radius: 0 5px 5px 0;
}

.pagination li.prev a {
    width: 4em;
}

.pagination li.next a {
    width: 2.5em;
}

.pagination li a:hover,
.pagination li a:active {
    color: #444444;
    font-weight: bold;
    text-decoration: none;
}

.pagination li a:active,
.pagination li a.active,
.pagination li a.active:hover {
    background: #f8f8f8;
}


/* Post Content */

.wrapper img {
    max-height: 434px;
    max-width: 100%;
}

.post-title {
    margin-bottom: 0;
}

.post-meta,
.post-meta a {
    color: #aaaaaa;
    margin-bottom: 0;
    white-space: nowrap;
}

.post-meta a:hover,
.post-meta a:active {
    text-decoration: underline;
}

.post-banner {
    background-size: auto 100%;
    -moz-background-size: auto 100%;
    -o-background-size: auto 100%;
    -webkit-background-size: auto 100%;
    background: #000000 url('/img/post-banners/no-image.gif') center;
    border-radius: 5px;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    display: block;
    margin: 0.5em 0;
    max-height: 150px;
    overflow: hidden;
    width: 100%;
}

.post-banner.no-image,
.post-banner.no-image:hover {
    background-size: 100% 100% !important;
    -moz-background-size: 100% 100% !important;
    -o-background-size: 100% 100% !important;
    -webkit-background-size: 100% 100% !important;
}

.post-banner > img {
    display: block;
    height: 0;
    margin: 0;
    padding-bottom: 33%;
    padding: 0;
    visibility: hidden;
    width: 100%;
}

a.post-banner {
    transition: all .2s ease-in-out;
    -moz-transition: all .2s ease-in-out;
    -o-transition: all .2s ease-in-out;
    -webkit-transition: all .2s ease-in-out;
}

a.post-banner:hover {
    background-size: auto 104%;
    -moz-background-size: auto 104%;
    -o-background-size: auto 104%;
    -webkit-background-size: auto 104%;
}

.post-excerpt {
    margin-bottom: 2em;
}


/* Footer / Sidebar */

footer {
    bottom: 50px;
    float: left;
    font-size: 14px;
    position: fixed;
    text-align: center;
    width: 240px;
}

footer small {
    display: block;
    font-size: 12px;
    margin: 10px 0;
}

img.avatar {
    border-radius: 40px;
    -moz-border-radius: 40px;
    -webkit-border-radius: 40px;
    height: 72px;
    width: 72px;
}

img.profile {
    border-radius: 5px;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    height: 100px;
    width: 100px;
}


/* Responsive Adjustments */

@media print, screen and (max-width: 1120px) {
    div.wrapper {
        margin: 0;
        width: auto;
    }

    header, section, footer {
        float: none;
        position: static;
        width: 100%;
    }

    header {
        border-right: 0;
        padding-right: 320px;
    }

    nav ul {
        border-bottom: none;
        height: 24px;
        position: absolute;
        right: 50px;
        top: 67px;
        width: 360px;
        border-radius: 5px 5px 0 0;
        -moz-border-radius: 5px 5px 0 0;
        -webkit-border-radius: 5px 5px 0 0;
    }

    nav li {
        border-bottom: none;
        border-right: 1px solid #dddddd;
        float: left;
        width: 71px;
    }

    nav li:last-child {
        border-right: none;
        width: 72px;
    }

    section {
        border-bottom: 1px solid #dddddd;
        border-top: 1px solid #dddddd;
        margin: 0 0 20px;
        padding: 20px 0;
    }

    footer {
        margin: 0 auto;
        max-width: 400px;
        text-align: center;
    }
}

@media print, screen and (max-width: 720px) {
    body {
        word-wrap: break-word;
    }

    header {
        padding: 0;
    }

    nav ul {
        margin-bottom: -1px;
        position: static;
    }

    pre, pre > code {
        word-wrap: normal;
    }
}

@media print, screen and (max-width: 480px) {
    body {
        padding: 15px;
    }

    .post-meta {
        font-size: 15px;
    }

}

@media print {
    body {
        color: #444444;
        font-size: 12pt;
        padding: 0.4in;
    }

    nav ul {
        display: none;
    }
}

